--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         La Loteria · Calle #7, Santiago · (809) 729-3998 ·
-                        <a href="mailto:name@email.com">r.mariotti19@gmail.com</a>
+                        <a href="mailto:r.mariotti19@gmail.com">r.mariotti19@gmail.com</a>
                     </div>
                     <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
                     <div class="social-icons">
