--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
                         </div>
                         <!-- <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div> -->
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Oracle Developer at Universidad Abierta para Adultos</h3>
+                            <h2 class="mb-0">Sept 2020 - Present</h2>
+                            <!-- <div class="subheading mb-3">Intelitec Solutions</div> -->
+                            <p>Developing stored procedures and argos reports, for the higher education ERP System Ellucian Banner.</p>
+                        </div>
+                        <!-- <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div> -->
+                    </div> 
                 </div>
             </section>
             <hr class="m-0" />
