--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <!-- <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div> -->
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">LoL Match Predictor</h3>
                             <!-- <div class="subheading mb-3">Intelitec Solutions</div> -->
