cambio de direccion

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary">Mariotti</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Villa Noa · Calle #1, Santiago · (809) 729-3998 ·
+                        Villa Noa · Calle #1, Santiago · (809) 729-3998
                         <a href="mailto:r.mariotti19@gmail.com">r.mariotti19@gmail.com</a>
                     </div>
                     <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
