--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Social Network Application</h3>
+                            <h3 class="mb-0">Angular PWA</h3>
                             <!-- <div class="subheading mb-3">Intelitec Solutions</div> -->
-                            <p>Social network similar to Facebook that requires registration and let users post
-                                on their wall or other users, get notifications, create albums of images and display a timeline.</p>
+                            <p>Small project following fireship.io course to learn the basics about Angular, PWA and deploy to Firebase.</p>
                         </div>
                         <!-- <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div> -->
                     </div>
@@ -101,12 +100,21 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Oracle Developer at Universidad Abierta para Adultos</h3>
-                            <h4 class="mb-0">Sept 2020 - Present</h4>
+                            <h4 class="mb-0">Sept 2020 - Sept 2022</h4>
                             <!-- <div class="subheading mb-3">Intelitec Solutions</div> -->
                             <p>Developing stored procedures and argos reports, for the higher education ERP System Ellucian Banner.</p>
                         </div>
                         <!-- <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div> -->
                     </div> 
+					<div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Data Scientist at Metaconxept</h3>
+                            <h4 class="mb-0">Sept 2022 - Present</h4>
+                            <!-- <div class="subheading mb-3">Intelitec Solutions</div> -->
+                            <p>Working with the BHD Bank, developing ETLs and Reports using a wide range of tools (Informatica, Pentaho, etc).</p>
+                        </div>
+                        <!-- <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div> -->
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
