--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            React [Prior Experience]
+                             Angular [Prior Experience]
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Amazon AWS [Prior Experience]
+                            Azure Data Factory [Prior Experience]
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            SQL Reporting Services
+                            PL/SQL - ETL Tools
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
